--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cmu drupal platform",
-  "version": "",
-  "description": "",
-  "author": "",
-  "license": "PRIVATE",
+  "name": "cmu-drupal-platform",
+  "version": "1.0.0",
+  "description": "Front-end tooling for Drupal Platform",
+  "author": "Christopher M. Kornell",
+  "license": "UNLICENSED",
   "main": "resources/scripts/main.js",
   "scripts": {
     "dev": "NODE_ENV=dev webpack",
@@ -40,7 +40,7 @@
     "stylelint-no-browser-hacks": "^1.2.1",
     "svg-sprite-loader": "^4.1.6",
     "svg-spritemap-webpack-plugin": "^3.3.6",
-    "uglifyjs-webpack-plugin": "^2.1.3",
+    "terser-webpack-plugin": "^1.3.0",
     "url-loader": "^2.0.1",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
